# anim4u-py

./: main.py  pyproject.toml  pyprojectn.toml
anim4u-py/: main.py  pyproject.toml
anim4u-py/providers/: animepahe_provider.py  anitaku_provider.py  base_provider.py
consumet-py/: pyproject.toml
consumet-py/consumet_py/Anime/: __init__.py
consumet-py/consumet_py/models/: __init__.py  anime.py
consumet-py/consumet_py/providers/: anime_provider.py  base_provider.py
consumet-py/consumet_py/providers/anime/: animepahe.py  anitaku.py
consumet-py/provider/: base_provider.py
consumet_py/: pyproject.toml
consumet_py/consumet_py/: __init__.py
consumet_py/consumet_py/providers/: anime_provider.py  base_provider.py
consumet_py/consumet_py/providers/anime/: __init__.py  animepahe.py
foru_lib_py/: pyproject.toml
foru_lib_py/foru_lib_py/: cli.py
libs/4ulib_py/: cli.py  pyproject.toml
libs/iamstarcode⁄4ulib_py/: pyproject.toml
projects/anim4u/: main.py  pyproject.toml  requirements.txt
projects/anim4u-py/: main.py  pyproject.toml
projects/anim4u-py/commands/: download.py
