[tool.poetry]
name = "anim4u-py"
version = "0.0.0-beta-1"
description = "A Python CLI for download anime"
authors = ["Bakare Abiola <iamstarcode@gmail.com>"]


[tool.poetry.dependencies]
python = ">=3.7"
typer = {extras = ["all"], version = "^0.9.0"}
foru-lib-py = {path = "../foru_lib_py", develop = true}



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"