[tool.poetry]
name = "anim4u-py"
version = "0.0.0-beta-1"
description = "A Python CLI for download anime"
authors = ["Bakare Abiola <iamstarcode@gmail.com>"]


[tool.poetry.dependencies]
python = ">=3.8"
typer = {extras = ["all"], version = "^0.9.0"}
foru-lib-py = {path = "../foru_lib_py"}
watchfiles = "^0.21.0"
consumet-py = {path = "../consumet-py", develop = true}

[tool.poe.tasks]
dev = "watchfiles 'python main.py download 'animepahe:jojo' --f --d --q 480'"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"