[tool.poetry]
name = "consumet-py"
version = "0.0.1-beta1"
description = ""
authors = ["Bakare Abiola <iamstarcode@gmail.com>"]
readme = "README.md"
packages = [{ include = "consumet_py"}]


[tool.poetry.dependencies]
python = ">=3.8"
pydantic = "^2.5.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
