[tool.poetry]
name = "anim4u-py"
version = "0.0.0-beta"
description = "A Python CLI for download anime"
authors = ["Bakare Abiola <iamstarcode@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.6"
4ulib_py = { path = "../../libs/4ulib_py", develop = false }


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"